--- a/Python Tricks.ipynb
+++ b/Python Tricks.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:1b15c52dc3ceee839d4fb87c5b31df1dedc6f79fe196171517ab39e23b324ef4"
+  "signature": "sha256:a98e82f3b7e99e377075f29b5a7281b487d74d9a125c443d8005dbfe6b0b9a8c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -166,6 +166,26 @@
       }
      ],
      "prompt_number": 13
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "1j + 1"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 2,
+       "text": [
+        "(1+1j)"
+       ]
+      }
+     ],
+     "prompt_number": 2
     },
     {
      "cell_type": "code",
