--- a/Python Tricks.ipynb
+++ b/Python Tricks.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:3d24dd8e05ee60c1983a1150dfe036a9d9cab2dda4090967dfc83fd744a42776"
+  "signature": "sha256:076b41a40fb55c7653410f5ae823022b3700e7f9a9044ab54a617b4edf45caee"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -290,6 +290,37 @@
       }
      ],
      "prompt_number": 53
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def dict_to_tuples(a, b, **kwargs):\n",
+      "    print a* b\n",
+      "    return [(k, v) for k, v in kwargs.iteritems()]\n",
+      "\n",
+      "dict_to_tuples(**{'a': 3, 'b': 14})"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "42\n"
+       ]
+      },
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 8,
+       "text": [
+        "[]"
+       ]
+      }
+     ],
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
