dunno, demoing something

--- a/Python Tricks.ipynb
+++ b/Python Tricks.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:9b62f96aca37f7aedb46edc03f87a1d910a5bc285207115335c7d4c3f79b43e9"
+  "signature": "sha256:497e08fbdd77fd43ccf260fcbb1d91695fd8aa19b7d52721190845f63cf33167"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -137,6 +137,70 @@
       }
      ],
      "prompt_number": 20
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "width = 50\n",
+      "\n",
+      "xs = list(xrange(1,20))\n",
+      "xs.extend(list(range(15,100)))\n",
+      "\n",
+      "xs.sort()\n",
+      "\n",
+      "lo = min(0, xs[0])\n",
+      "hi = max(.001, xs[-1])\n",
+      "if hi == lo:\n",
+      "    hi += .001 # ugh\n",
+      "\n",
+      "pos    = lambda p: xs[int(len(xs) * p)]\n",
+      "place  = lambda x: min(width-1, int(width * float((x - lo))/(hi - lo)))\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": 41
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "place(40)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 44,
+       "text": [
+        "20"
+       ]
+      }
+     ],
+     "prompt_number": 44
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "xs[20]"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 45,
+       "text": [
+        "18"
+       ]
+      }
+     ],
+     "prompt_number": 45
     },
     {
      "cell_type": "code",
